k8s/messaging-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: messaging-service
  name: messaging-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-service
  template:
    metadata:
      labels:
        app: messaging-service
    spec:
      containers:
        - env:
            - name: DB_HOST
              value: mysql
            - name: DB_NAME
              value: uni_db
            - name: DB_PORT
              value: "3306"
            - name: DB_USER
              value: root
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mysql-secrets
                  key: DB_PASSWORD
          image: messaging-service:latest
          name: messaging-service
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
              protocol: TCP
      restartPolicy: Always
