k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - args:
            - mysqld
            - --bind-address=0.0.0.0
            - --lower_case_table_names=1
          image: mysql:latest
          livenessProbe:
            tcpSocket:
              port: 3306
            failureThreshold: 10
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
          name: mysql
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
      restartPolicy: Always
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data
