k8s/courses-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml -o k8s/
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    app: courses-service
  name: courses-service
spec:
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8083
  selector:
    app: courses-service
