k8s/events-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml -o k8s/
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    app: events-service
  name: events-service
spec:
  ports:
    - name: "8084"
      port: 8084
      targetPort: 8084
  selector:
    app: events-service
