k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml -o k8s/
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    app: frontend
  name: frontend
spec:
  ports:
    - name: http
      port: 8085
      targetPort: 80
  selector:
    app: frontend
