k8s/messaging-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml -o k8s/
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    app: messaging-service
  name: messaging-service
spec:
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8082
  selector:
    app: messaging-service
