k8s/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traefik
  name: traefik
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: traefik
