k8s/users-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: users-service
  name: users-service
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    app: users-service
