k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: users.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 8081
  - host: courses.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: courses-service
            port:
              number: 8083
  - host: messaging.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: messaging-service
            port:
              number: 8082
  - host: events.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: events-service
            port:
              number: 8084
  - host: plateform.universitaire
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8085
